@@ -93,7 +93,7 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Djinfer.convTile=4x2</argLine>
+              <argLine>@{argLine} ${jinfer.jvm.flags} -Djinfer.convTile=4x2</argLine>
             </configuration>
           </execution>
           <execution>
@@ -103,7 +103,7 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Djinfer.convTile=4x4</argLine>
+              <argLine>@{argLine} ${jinfer.jvm.flags} -Djinfer.convTile=4x4</argLine>
             </configuration>
           </execution>
           <execution>
@@ -113,7 +113,7 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Djinfer.vectorJit=fast</argLine>
+              <argLine>@{argLine} ${jinfer.jvm.flags} -Djinfer.vectorJit=fast</argLine>
             </configuration>
           </execution>
           <execution>
@@ -123,7 +123,7 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Djinfer.vectorJit=slow</argLine>
+              <argLine>@{argLine} ${jinfer.jvm.flags} -Djinfer.vectorJit=slow</argLine>
             </configuration>
           </execution>
           <execution>
@@ -133,7 +133,7 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Djinfer.vectorJit=fast -Djinfer.gdn.vector=false -Djinfer.mamba2.vector=false -Djinfer.mamba2.vectorNorm=false</argLine>
+              <argLine>@{argLine} ${jinfer.jvm.flags} -Djinfer.vectorJit=fast -Djinfer.gdn.vector=false -Djinfer.mamba2.vector=false -Djinfer.mamba2.vectorNorm=false</argLine>
             </configuration>
           </execution>
           <execution>
@@ -143,7 +143,7 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Djinfer.vectorJit=fast -Djinfer.vectorBitSize=128</argLine>
+              <argLine>@{argLine} ${jinfer.jvm.flags} -Djinfer.vectorJit=fast -Djinfer.vectorBitSize=128</argLine>
             </configuration>
           </execution>
           <execution>
@@ -153,7 +153,7 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Djinfer.vectorBitSize=0</argLine>
+              <argLine>@{argLine} ${jinfer.jvm.flags} -Djinfer.vectorBitSize=0</argLine>
             </configuration>
           </execution>
           <execution>
@@ -165,7 +165,7 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Djinfer.kernels.expectJam=vector,scalar</argLine>
+              <argLine>@{argLine} ${jinfer.jvm.flags} -Djinfer.kernels.expectJam=vector,scalar</argLine>
               <classpathDependencyExcludes>
                 <classpathDependencyExclude>com.qxotic:jam-native</classpathDependencyExclude>
               </classpathDependencyExcludes>
